dark mode bugfix

--- a/src/scss/custom.sass
+++ b/src/scss/custom.sass
@@ -222,3 +222,7 @@ body
   font-weight: 500
   color: $headings-color
   background: rgba($white, 0)
+
++color-mode(dark)
+  .show-more
+    color: $white
